[tool.poetry]
name = "mp4-to-gif"
version = "0.1.0"
description = ""
authors = ["Jas Palermo <jasmes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
moviepy = "^1.0.3"
imageio = "^2.21.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
